package com.example.electroniccard;

public interface ElectronicCard {
    void displayInfo();
}